--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-    <h1>Test</h1>
+    <h1>CMD Students favorite color</h1>
+    <div class="overview"></div>
+    <script src="survey_data.js"></script>
     <script src="cleanup.js"></script>
 </body>
 
