first step in fetching open rdw api

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>CMD Students favorite color</h1>
     <div class="overview"></div>
     <script src="survey_data.js"></script>
-    <script src="cleanup.js"></script>
+    <script src="surveyCleanup.js"></script>
+    <script src="parkingData.js"></script>
 </body>
 
 </html>
